# pythonup-windows

./: .gitignore  HISTORY.md  Pipfile  README.rst  appveyor.yml  setup.cfg
docs/source/: conf.py  develop.rst  explain.rst  implement.rst  install.rst  manage.rst  misc.rst
installers/: Dockerfile  __init__.py  setup.nsi
installers/lib/setup/: activation.py  discovery.py  env.py  shim.py
pythonup/: __init__.py  __main__.py  configs.py  installation.json  installations.py  metadata.py  releases.py  versions.py
pythonup/operations/: common.py  download.py  install.py  link.py  releases.py
pythonup/versions/: 2.7.json  3.10-32.json  3.10.json  3.5-32.json  3.5.json  3.6-32.json  3.6.json  3.7-32.json  3.7.json  3.8-32.json  3.8.json  3.9-32.json  3.9.json
shims/: Cargo.toml  __init__.py
shims/pythonup/: Cargo.toml
shims/pythonup/src/: pythons.rs  run.rs
shims/snafu/: Cargo.toml
shims/snafu/src/: pythons.rs
shims/src/: cmds.rs  main.rs  procs.rs  pythonup.rs
shims/src/piplike/: command.rs  script.rs
shims/src/python/: command.rs  script.rs
stubs/: README.txt
tests/: test_installations.py  test_versions.py
tools/: check_md5.py  update_version.py
